--- a/data/graphConfig.yaml
+++ b/data/graphConfig.yaml
@@ -1,7 +1,7 @@
 # if true, a Global Graph will be shown on home page with full width, no backlink.
 # A different set of Local Graphs will be shown on sub pages.
 # if false, Local Graph will be default on every page as usual
-enableGlobalGraph: false
+enableGlobalGraph: true
 
 ### Local Graph ###
 
@@ -9,11 +9,11 @@ localGraph:
     enableLegend: false
     enableDrag: true
     enableZoom: true
-    depth: 1 # set to -1 to show full graph
-    scale: 1.2
+    depth: 2 # set to -1 to show full graph
+    scale: 1.
     repelForce: 2
     centerForce: 1
-    linkDistance: 1
+    linkDistance: 0.5
     fontSize: 0.6
     opacityScale: 3
 
