Change URL again.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "www.codyaldaz.xyz"
+baseURL = "craldaz.github.io"
 languageCode = "en-us"
 googleAnalytics = "G-XYFD95KB4J"
 relativeURLs = false
