--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "craldaz.github.io/personal-website/""
+baseURL = "craldaz.github.io/personal-website/"
 languageCode = "en-us"
 googleAnalytics = "G-XYFD95KB4J"
 relativeURLs = false
