--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "www.codyaldaz.com"
+baseURL = "www.codyaldaz.com/"
 languageCode = "en-us"
 googleAnalytics = "G-XYFD95KB4J"
 relativeURLs = false
