--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
-baseURL = "www.codyaldaz.com/"
+baseURL = "https://quartz.jzhao.xyz/"
 languageCode = "en-us"
-googleAnalytics = "G-XYFD95KB4J"
 relativeURLs = false
 disablePathToLower = true
 ignoreFiles = [
