--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,6 +1,6 @@
 name: Cody Aldaz
-enableToc: false
-openToc: true
+enableToc: true
+openToc: false
 enableLinkPreview: true
 enableLatex: true
 enableCodeBlockTitle: true
@@ -11,11 +11,14 @@ enableFooter: true
 enableContextualBacklinks: true
 enableRecentNotes: false
 enableGitHubEdit: true
-GitHubLink: https://github.com/craldaz
-enableSemanticSearch: false
-operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
+enableMermaid: true
+GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
+search:
+  enableSemanticSearch: false
+  operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
+  operandIndexId: "REPLACE-WITH-YOUR-OPERAND-INDEX-ID"
 description:
-  "My website"
+  "Portfolio for Cody Aldaz, PhD"
 page_title:
   "🪴 Cody Aldaz"
 links:
