--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://www.codyaldaz.com/"
+baseURL = "https://www.codyaldaz.com/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
